--- a/configure.ac
+++ b/configure.ac
@@ -296,20 +296,20 @@ case $host in
          dnl It's safe to add these paths even if the functionality is disabled by
          dnl the user (--without-wallet or --without-gui for example).
 
-         openssl_prefix=`$BREW --prefix openssl 2>/dev/null`
          bdb_prefix=`$BREW --prefix berkeley-db4 2>/dev/null`
          qt5_prefix=`$BREW --prefix qt5 2>/dev/null`
-         if test x$openssl_prefix != x; then
-           PKG_CONFIG_PATH="$openssl_prefix/lib/pkgconfig:$PKG_CONFIG_PATH"
-           export PKG_CONFIG_PATH
-         fi
+         openssl_prefix=`$BREW --prefix openssl 2>/dev/null`
          if test x$bdb_prefix != x; then
            CPPFLAGS="$CPPFLAGS -I$bdb_prefix/include"
            LIBS="$LIBS -L$bdb_prefix/lib"
          fi
-         if test x$qt5_prefix != x; then
-           PKG_CONFIG_PATH="$qt5_prefix/lib/pkgconfig:$PKG_CONFIG_PATH"
+		 if test x$qt5_prefix != x; then
+           PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$qt5_prefix/lib/pkgconfig"
            export PKG_CONFIG_PATH
+         fi
+         if test x$openssl_prefix != x; then
+           PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$openssl_prefix/lib/pkgconfig"           		   
+		   export PKG_CONFIG_PATH
          fi
        fi
      else
