--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -7,6 +7,7 @@ architectures:
 - "amd64"
 packages:
 - "curl"
+- "cmake"
 - "g++-aarch64-linux-gnu"
 - "g++-4.8-aarch64-linux-gnu"
 - "gcc-4.8-aarch64-linux-gnu"
