--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -7,7 +7,6 @@ architectures:
 - "amd64"
 packages:
 - "curl"
-- "cmake"
 - "g++-aarch64-linux-gnu"
 - "g++-4.8-aarch64-linux-gnu"
 - "gcc-4.8-aarch64-linux-gnu"
@@ -33,7 +32,6 @@ remotes:
   "dir": "beenode"
 files: []
 script: |
-
   WRAP_DIR=$HOME/wrapped
   HOSTS="i686-pc-linux-gnu x86_64-linux-gnu arm-linux-gnueabihf aarch64-linux-gnu"
   CONFIGFLAGS="--enable-glibc-back-compat --enable-reduce-exports --disable-bench --disable-gui-tests"
@@ -43,6 +41,11 @@ script: |
   HOST_CXXFLAGS="-O2 -g"
   HOST_LDFLAGS=-static-libstdc++
 
+  
+  sudo apt-get install software-properties-common
+  add-apt-repository ppa:george-edison55/cmake-3.x
+  sudo apt-get update
+  sudo apt-get install cmake
   export QT_RCC_TEST=1
   export GZIP="-9n"
   export TAR_OPTIONS="--mtime="$REFERENCE_DATE\\\ $REFERENCE_TIME""
