--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -8,7 +8,6 @@ architectures:
 packages:
 - "curl"
 - "g++"
-- "cmake"
 - "git-core"
 - "pkg-config"
 - "autoconf"
@@ -35,6 +34,10 @@ script: |
   HOST_CFLAGS="-O2 -g"
   HOST_CXXFLAGS="-O2 -g"
 
+  sudo apt-get install software-properties-common
+  add-apt-repository ppa:george-edison55/cmake-3.x
+  sudo apt-get update
+  sudo apt-get install cmake
   export QT_RCC_TEST=1
   export GZIP="-9n"
   export TAR_OPTIONS="--mtime="$REFERENCE_DATE\\\ $REFERENCE_TIME""
