--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -7,6 +7,7 @@ architectures:
 - "amd64"
 packages:
 - "curl"
+- "cmake"
 - "g++"
 - "git-core"
 - "pkg-config"
@@ -34,10 +35,6 @@ script: |
   HOST_CFLAGS="-O2 -g"
   HOST_CXXFLAGS="-O2 -g"
 
-  sudo apt-get install software-properties-common
-  add-apt-repository ppa:george-edison55/cmake-3.x
-  sudo apt-get update
-  sudo apt-get install cmake
   export QT_RCC_TEST=1
   export GZIP="-9n"
   export TAR_OPTIONS="--mtime="$REFERENCE_DATE\\\ $REFERENCE_TIME""
